--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -185,6 +185,9 @@ img.large {
   color: #404040;
 }
 /* Alert */
+.loading{
+  display: block !important;
+}
 .success {
   color: #20a020;
 }
@@ -204,8 +207,54 @@ img.large {
   color: #a02020;
   background-color: #ffe0e0;
 }
-
 .quantity{
   padding: 1rem;
   background-color: lightgray;
+}
+/* Form */
+.form-container{
+  box-shadow: 10px 10px 50px 20px gray;
+  max-width: 50rem;
+  position: absolute;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+.form {
+  max-width: 40rem;
+  margin: 0 auto;
+}
+.form-header{
+  font-size: 2.5rem;
+  border-bottom: 5px lightgray solid;
+  padding: 2rem 0;
+}
+.form > div {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+.form label {
+  margin: 1rem 0;
+  display: block;
+}
+/* Dropdown */
+.dropdown {
+  display: inline-block;
+  position: relative;
+}
+.dropdown-content {
+  position: absolute;
+  display: none;
+  right: 0;
+  min-width: 12rem;
+  padding: 1rem;
+  z-index: 1;
+  background-color: #203040;
+  margin: 0;
+  margin-top: 0.4rem;
+  border-radius: 0.5rem;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
 }
